# platform-sdl

./: .gitignore  CMakeLists.txt  README.md
Game/: main.cpp
Game/include/: GameObject.hpp  HelloWorld.hpp  Pair.hpp
Game/src/: GameObject.cpp  HelloWorld.cpp  Pair.cpp
